# yolov11_deepsort_ros

./: CMakeLists.txt  README.md  package.xml  yolov11d.yaml
launch/: yolov11_deepsort.launch
src/: yolov11_deepsort.py
