<?xml version="1.0"?>
<package format="2">
  <name>yolov11_deepsort</name>
  <version>0.0.1</version>
  <description>YOLOv11 + DeepSORT object tracking package</description>

  <maintainer email="your_email@example.com">김민기</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package>

